# ChatApp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
client/: CMakeLists.txt  Makefile  client.c  cmake_install.cmake
includes/: socket.h  utility.c  utility.h
server/: CMakeLists.txt  Makefile  cmake_install.cmake  server.c
